{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 50,
  "lineage": "850124c6-03bc-7ad2-7413-676dd6ff7d7a",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b24da7ae8d0fd59f",
            "arn": "arn:aws:ec2:eu-west-1:179151669003:elastic-ip/eipalloc-0b24da7ae8d0fd59f",
            "domain": "vpc",
            "id": "eipalloc-0b24da7ae8d0fd59f",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-17-230-72.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.17.230.72",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-nat_eip-a",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-nat_eip-a",
              "Project": "lab44"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004cb615f8cfa315a",
            "arn": "arn:aws:ec2:eu-west-1:179151669003:elastic-ip/eipalloc-004cb615f8cfa315a",
            "domain": "vpc",
            "id": "eipalloc-004cb615f8cfa315a",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-31-162-148.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.31.162.148",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-nat_eip-b",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-nat_eip-b",
              "Project": "lab44"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03446a3af42c5e74e",
            "arn": "arn:aws:ec2:eu-west-1:179151669003:instance/i-032ac4a242ad18770",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032ac4a242ad18770",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "lab44_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-042cc8d0c7fca3ef4"
              }
            ],
            "primary_network_interface_id": "eni-042cc8d0c7fca3ef4",
            "private_dns": "ip-10-30-1-210.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.210",
            "public_dns": "ec2-52-18-142-200.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.18.142.200",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03b3d337a43709ab3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026b50e49efe89fdb",
            "tags": {
              "Environment": "full",
              "Name": "lab44-bastion",
              "Project": "lab44",
              "Role": "bastion"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-bastion",
              "Project": "lab44",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ead8af8dd501d392"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "i-032ac4a242ad18770",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_key_pair.lab44",
            "module.network.aws_security_group.bastion",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_ami.ubuntu",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03446a3af42c5e74e",
            "arn": "arn:aws:ec2:eu-west-1:179151669003:instance/i-041d0363310b5c8a2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041d0363310b5c8a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "lab44_terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07fd42666e5d9aab3"
              }
            ],
            "primary_network_interface_id": "eni-07fd42666e5d9aab3",
            "private_dns": "ip-10-30-11-111.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.11.111",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08d387f3c62a9d389",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005f93217d23a293a",
            "tags": {
              "Environment": "full",
              "Name": "lab44-web",
              "Project": "lab44",
              "Role": "web"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-web",
              "Project": "lab44",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00348df8d236c813e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "i-041d0363310b5c8a2",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_key_pair.lab44",
            "module.network.aws_security_group.bastion",
            "module.network.aws_security_group.web",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_ami.ubuntu",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:internet-gateway/igw-0bee668877464f0ec",
            "id": "igw-0bee668877464f0ec",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-igw",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-igw",
              "Project": "lab44"
            },
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b24da7ae8d0fd59f",
            "association_id": "eipassoc-0de054fb79f758516",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04b0b4c664972922b",
            "network_interface_id": "eni-0a69a73736d1ecd4f",
            "private_ip": "10.30.1.58",
            "public_ip": "52.17.230.72",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-026b50e49efe89fdb",
            "tags": {
              "Environment": "full",
              "Name": "lab44-nat_gw-a",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-nat_gw-a",
              "Project": "lab44"
            },
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004cb615f8cfa315a",
            "association_id": "eipassoc-07947b79647600d97",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-082706ef44fceeb1f",
            "network_interface_id": "eni-07466a535552d4cd7",
            "private_ip": "10.30.2.141",
            "public_ip": "52.31.162.148",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-094f7ec54493ae13a",
            "tags": {
              "Environment": "full",
              "Name": "lab44-nat_gw-b",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-nat_gw-b",
              "Project": "lab44"
            },
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:route-table/rtb-06c56b41b97b398c7",
            "id": "rtb-06c56b41b97b398c7",
            "owner_id": "179151669003",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04b0b4c664972922b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_rt-a",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_rt-a",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "rtb-06c56b41b97b398c7",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:route-table/rtb-03fa35451e0bf7a2c",
            "id": "rtb-03fa35451e0bf7a2c",
            "owner_id": "179151669003",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-082706ef44fceeb1f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_rt-b",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_rt-b",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "rtb-03fa35451e0bf7a2c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:route-table/rtb-0d831246103348de8",
            "id": "rtb-0d831246103348de8",
            "owner_id": "179151669003",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bee668877464f0ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "full",
              "Name": "lab44-public_rt",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-public_rt",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "rtb-0d831246103348de8",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d506f73f97313f35",
            "region": "eu-west-1",
            "route_table_id": "rtb-06c56b41b97b398c7",
            "subnet_id": "subnet-005f93217d23a293a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c4bc7a4760b8f87",
            "region": "eu-west-1",
            "route_table_id": "rtb-03fa35451e0bf7a2c",
            "subnet_id": "subnet-0dd3af911dda6d774"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b6a5469e5e0b3a2",
            "region": "eu-west-1",
            "route_table_id": "rtb-0d831246103348de8",
            "subnet_id": "subnet-026b50e49efe89fdb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af97a7a3057f0057",
            "region": "eu-west-1",
            "route_table_id": "rtb-0d831246103348de8",
            "subnet_id": "subnet-094f7ec54493ae13a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:security-group/sg-0ead8af8dd501d392",
            "description": "SSH from my IP only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ead8af8dd501d392",
            "ingress": [
              {
                "cidr_blocks": [
                  "86.40.99.53/32"
                ],
                "description": "SSH from allowed IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab44-bastion_sg",
            "name_prefix": "",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "full",
              "Name": "lab44-bastion_sg",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-bastion_sg",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "sg-0ead8af8dd501d392",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:security-group/sg-0fb0874d4742952f9",
            "description": "Allow DB from Web SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb0874d4742952f9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from Web SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00348df8d236c813e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "lab44-db_sg",
            "name_prefix": "",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "full",
              "Name": "lab44-db_sg",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-db_sg",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "sg-0fb0874d4742952f9",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.bastion",
            "module.network.aws_security_group.web",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:security-group/sg-00348df8d236c813e",
            "description": "Allow HTTP/S from anywhere, SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00348df8d236c813e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP 80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ead8af8dd501d392"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab44-web_sg",
            "name_prefix": "",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "full",
              "Name": "lab44-web_sg",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-web_sg",
              "Project": "lab44"
            },
            "timeouts": null,
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "sg-00348df8d236c813e",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.bastion",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-005f93217d23a293a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.30.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005f93217d23a293a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_subnet-a",
              "Project": "lab44",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_subnet-a",
              "Project": "lab44",
              "Tier": "private"
            },
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-005f93217d23a293a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-0dd3af911dda6d774",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.30.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd3af911dda6d774",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-private_subnet-b",
              "Project": "lab44",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-private_subnet-b",
              "Project": "lab44",
              "Tier": "private"
            },
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-0dd3af911dda6d774",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-026b50e49efe89fdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026b50e49efe89fdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-public_subnet-a",
              "Project": "lab44",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-public_subnet-a",
              "Project": "lab44",
              "Tier": "public"
            },
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-026b50e49efe89fdb",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:subnet/subnet-094f7ec54493ae13a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094f7ec54493ae13a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179151669003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-public_subnet-b",
              "Project": "lab44",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-public_subnet-b",
              "Project": "lab44",
              "Tier": "public"
            },
            "vpc_id": "vpc-06712d7d60f1d41bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "subnet-094f7ec54493ae13a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:179151669003:vpc/vpc-06712d7d60f1d41bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0803f69bd14514bd6",
            "default_route_table_id": "rtb-04fffacd1ff2aba85",
            "default_security_group_id": "sg-07dfba96e7aa50ab5",
            "dhcp_options_id": "dopt-0d3e33a46ba198995",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06712d7d60f1d41bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04fffacd1ff2aba85",
            "owner_id": "179151669003",
            "region": "eu-west-1",
            "tags": {
              "Environment": "full",
              "Name": "lab44-vpc",
              "Project": "lab44"
            },
            "tags_all": {
              "Environment": "full",
              "Name": "lab44-vpc",
              "Project": "lab44"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "179151669003",
            "id": "vpc-06712d7d60f1d41bb",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}